第一次版本提交

--- a/LJXPhotoAlbum/LJXPhotoAlbum/Base.lproj/Main.storyboard
+++ b/LJXPhotoAlbum/LJXPhotoAlbum/Base.lproj/Main.storyboard
@@ -1,25 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5yb-Ij-st5">
+                                <rect key="frame" x="46" y="50" width="282" height="282"/>
+                                <color key="backgroundColor" red="1" green="0.95302828324031086" blue="0.85651510522059315" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5yb-Ij-st5" secondAttribute="height" multiplier="1:1" id="sag-JD-Pht"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9RP-er-TMo">
+                                <rect key="frame" x="128" y="352" width="120" height="60"/>
+                                <color key="backgroundColor" red="1" green="0.54996464376841325" blue="0.39685957250563597" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="LZj-KE-z3L"/>
+                                    <constraint firstAttribute="height" constant="60" id="g4a-MF-gIA"/>
+                                </constraints>
+                                <state key="normal" title="PHOTO">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="takePhotoClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zHk-Mw-HLg"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9RP-er-TMo" firstAttribute="top" secondItem="5yb-Ij-st5" secondAttribute="bottom" constant="20" id="MVf-bx-ClJ"/>
+                            <constraint firstItem="5yb-Ij-st5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Npj-u5-bv4"/>
+                            <constraint firstItem="5yb-Ij-st5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="QyJ-Hb-mtZ"/>
+                            <constraint firstItem="9RP-er-TMo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RMQ-Qi-Xfh"/>
+                            <constraint firstItem="5yb-Ij-st5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="dbl-mb-qD8"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="imageView" destination="5yb-Ij-st5" id="MYi-pc-Llw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="336.5" y="347.5"/>
         </scene>
     </scenes>
 </document>
